Fix vertical spacing of H2 and H3 (Fixes #9)

--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -28,7 +28,7 @@ h1, h2 {
 
 h1 {
   font-size: clamp(3rem, calc(1rem + 3vw), 6rem);
-  margin-block: 1em;
+  margin-block: var(--pad-medium);
   text-align: center;
   line-height: 1em;
 }
@@ -58,8 +58,14 @@ p {
   margin-block-start: var(--pad-small);
 }
 
-:is(p, ul, ol) + :is(h1, h2, h3, h4, h5, h6) {
+:is(p, ul, ol) + :is(h3, h4, h5, h6) {
   margin-block-start: var(--pad-medium);
+  line-height: 1em;
+}
+
+:is(p, ul, ol) + :is(h2) {
+  margin-block-start: var(--pad-large);
+  margin-block-end: calc(var(--pad-small)*2);
 }
 
 // LISTS
